@@ -34,10 +34,11 @@ int epl_page_header(EPL_job_info *epl_job_info)
   char *ts;
   char paper_code;
   char stripe_size;
-  int bytes_per_row_2;
+  int bytes_per_row;
+  int bytes_per_row_padded;
   int hor_pixels;
   int ver_pixels;
-  int total_stripes;
+  int stripes_per_page;
   int copies;
   int cust_paper_hor;
   int cust_paper_ver;
@@ -53,27 +54,34 @@ int epl_page_header(EPL_job_info *epl_job_info)
 
   paper_code = (char)0xff;	/* 0xff is custom size */
   stripe_size = 64;
-  bytes_per_row_2 = epl_job_info->bytes_per_row_2;
+  bytes_per_row = ((epl_job_info->pixel_h + 32 - 1) / 32) * 4;
   hor_pixels = epl_job_info->pixel_h;
   ver_pixels = epl_job_info->pixel_v;
-  total_stripes = epl_job_info->total_stripes;
+  stripes_per_page = (epl_job_info->pixel_v + stripe_size - 1) / stripe_size;
   copies=1;
   cust_paper_hor = epl_job_info->paper_size_mm_h;
   cust_paper_ver = epl_job_info->paper_size_mm_v;
+
+  bytes_per_row_padded = bytes_per_row;
   
+#ifdef STRIPE_OVERFLOW_WORKAROUND
+  /* The number of bytes guaranteed to hold the compressed data, padded to 32-bit boundary */
+  bytes_per_row_padded = (((bytes_per_row * 1.25 + 2 + 1) + 4 - 1 ) / 4 ) * 4;  
+#endif
+
   /* model-indepenent part for 57,58,5900L*/
 
   sprintf(data_block_5xL, "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
 	  paper_code,
 	  stripe_size,
-	  bytes_per_row_2 >> 8, bytes_per_row_2,
+	  bytes_per_row_padded >> 8, bytes_per_row_padded,
 	  0x00,
 	  0x00,
 	  0x00,
 	  0x00,
 	  ver_pixels >> 8, ver_pixels,
 	  hor_pixels >> 8, hor_pixels,
-	  total_stripes >> 8, total_stripes,
+	  stripes_per_page >> 8, stripes_per_page,
 	  0x00, /* MP Tray */
 	  0x00,
 	  copies,
@@ -89,13 +97,13 @@ int epl_page_header(EPL_job_info *epl_job_info)
 	  "%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c%c",
 	  paper_code,                                        /* \183      */
 	  stripe_size,
-	  bytes_per_row_2 >> 8, bytes_per_row_2,             /* \185 \186 */
+	  bytes_per_row_padded >> 8, bytes_per_row_padded,                 /* \185 \186 */
 	  0x00,0x64,  /* 6100L -  top ofset in 1/10 pixels  = 4mm */
 	  0x00,0x64,  /* 6100L - left ofset in 1/10 pixels  = 4mm */
 	  0x00,0x00,0x00,0x00,  /* 6100L */
 	  ver_pixels >> 8, ver_pixels,                       /* \195 \196 */
 	  hor_pixels >> 8, hor_pixels,                       /* \197 \198 */
-	  total_stripes >> 8, total_stripes,                 /* \199 \200 */
+	  stripes_per_page >> 8, stripes_per_page,           /* \199 \200 */
 	  0x00, 0x00, 0x00, 0x00, 0x00, /* 6100L */
 	  copies,                                            /* \206      */ 
 	  0x00, 0x00, 0x01,  /* 6100L */
